--- a/mitiv/microscopy/PSF_Estimation.html
+++ b/mitiv/microscopy/PSF_Estimation.html
@@ -34,8 +34,8 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -60,13 +60,13 @@
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li>FIELD&nbsp;|&nbsp;</li>
+<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li>FIELD&nbsp;|&nbsp;</li>
+<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
@@ -107,6 +107,33 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="summary">
 <ul class="blockList">
 <li class="blockList">
+<!-- =========== FIELD SUMMARY =========== -->
+<ul class="blockList">
+<li class="blockList"><a name="field_summary">
+<!--   -->
+</a>
+<h3>Field Summary</h3>
+<table class="overviewSummary" border="0" cellpadding="3" cellspacing="0" summary="Field Summary table, listing fields, and an explanation">
+<caption><span>Fields</span><span class="tabEnd">&nbsp;</span></caption>
+<tr>
+<th class="colFirst" scope="col">Modifier and Type</th>
+<th class="colLast" scope="col">Field and Description</th>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>static int</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#ALPHA">ALPHA</a></strong></code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>static int</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#BETA">BETA</a></strong></code>&nbsp;</td>
+</tr>
+<tr class="altColor">
+<td class="colFirst"><code>static int</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#DEFOCUS">DEFOCUS</a></strong></code>&nbsp;</td>
+</tr>
+</table>
+</li>
+</ul>
 <!-- ======== CONSTRUCTOR SUMMARY ======== -->
 <ul class="blockList">
 <li class="blockList"><a name="constructor_summary">
@@ -146,66 +173,66 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#enablePositivity(java.lang.Boolean)">enablePositivity</a></strong>(java.lang.Boolean&nbsp;positivity)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#fitPSF(mitiv.linalg.shaped.DoubleShapedVector, int)">fitPSF</a></strong>(<a href="../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;x,
       int&nbsp;flag)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getCost()">getCost</a></strong>()</code>
 <div class="block">Get the current value of the objective function.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getData()">getData</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getEvaluations()">getEvaluations</a></strong>()</code>
 <div class="block">Get the current number of function evaluations.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNorm1()">getGradientNorm1</a></strong>()</code>
 <div class="block">Get the L1 norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNorm2()">getGradientNorm2</a></strong>()</code>
 <div class="block">Get the Euclidean (L2) norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNormInf()">getGradientNormInf</a></strong>()</code>
 <div class="block">Get the infinite norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getIterations()">getIterations</a></strong>()</code>
 <div class="block">Get the current number of iterations.</div>
 </td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
+<tr class="rowColor">
+<td class="colFirst"><code><a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getPsf()">getPsf</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getRelativeTolerance()">getRelativeTolerance</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getResult()">getResult</a></strong>()</code>
 <div class="block">Get the current reconstruction result.</div>
 </td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>java.lang.String</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getSynchronizedParameterName(int)">getSynchronizedParameterName</a></strong>(int&nbsp;i)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a></code></td>
@@ -241,35 +268,27 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setObj(mitiv.array.ShapedArray)">setObj</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
+<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPsf(mitiv.array.DoubleArray)">setPsf</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;psf)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">setPupil</a></strong>(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</code>&nbsp;</td>
-</tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationThreshold(double)">setRegularizationThreshold</a></strong>(double&nbsp;value)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setPupil(mitiv.microscopy.WideFieldModel)">setPupil</a></strong>(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRegularizationWeight(double)">setRegularizationWeight</a></strong>(double&nbsp;value)</code>&nbsp;</td>
-</tr>
-<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setRelativeTolerance(double)">setRelativeTolerance</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setResult(mitiv.array.DoubleArray)">setResult</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;result)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setUpperBound(double)">setUpperBound</a></strong>(double&nbsp;value)</code>&nbsp;</td>
-</tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setVerboseMode(boolean)">setVerboseMode</a></strong>(boolean&nbsp;value)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setUpperBound(double)">setUpperBound</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
@@ -277,9 +296,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setWeight(double[])">setWeight</a></strong>(double[]&nbsp;W)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setWeight(mitiv.array.DoubleArray)">setWeight</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
+<td class="colFirst"><code>void</code></td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#start()">start</a></strong>()</code>&nbsp;</td>
+</tr>
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#stop()">stop</a></strong>()</code>&nbsp;</td>
 </tr>
@@ -299,6 +322,44 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="details">
 <ul class="blockList">
 <li class="blockList">
+<!-- ============ FIELD DETAIL =========== -->
+<ul class="blockList">
+<li class="blockList"><a name="field_detail">
+<!--   -->
+</a>
+<h3>Field Detail</h3>
+<a name="DEFOCUS">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>DEFOCUS</h4>
+<pre>public static final&nbsp;int DEFOCUS</pre>
+<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.DEFOCUS">Constant Field Values</a></dd></dl>
+</li>
+</ul>
+<a name="ALPHA">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>ALPHA</h4>
+<pre>public static final&nbsp;int ALPHA</pre>
+<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.ALPHA">Constant Field Values</a></dd></dl>
+</li>
+</ul>
+<a name="BETA">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>BETA</h4>
+<pre>public static final&nbsp;int BETA</pre>
+<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.BETA">Constant Field Values</a></dd></dl>
+</li>
+</ul>
+</li>
+</ul>
 <!-- ========= CONSTRUCTOR DETAIL ======== -->
 <ul class="blockList">
 <li class="blockList"><a name="constructor_detail">
@@ -340,13 +401,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;void&nbsp;deleteSynchronizer()</pre>
 </li>
 </ul>
-<a name="getSynchronizedParameterName(int)">
+<a name="enablePositivity(java.lang.Boolean)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
-<h4>getSynchronizedParameterName</h4>
-<pre>public&nbsp;java.lang.String&nbsp;getSynchronizedParameterName(int&nbsp;i)</pre>
+<h4>enablePositivity</h4>
+<pre>public&nbsp;void&nbsp;enablePositivity(java.lang.Boolean&nbsp;positivity)</pre>
 </li>
 </ul>
 <a name="fitPSF(mitiv.linalg.shaped.DoubleShapedVector, int)">
@@ -357,15 +418,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <h4>fitPSF</h4>
 <pre>public&nbsp;void&nbsp;fitPSF(<a href="../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;x,
           int&nbsp;flag)</pre>
-</li>
-</ul>
-<a name="setVerboseMode(boolean)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>setVerboseMode</h4>
-<pre>public&nbsp;void&nbsp;setVerboseMode(boolean&nbsp;value)</pre>
 </li>
 </ul>
 <a name="setDebugMode(boolean)">
@@ -393,24 +445,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <li class="blockList">
 <h4>setLimitedMemorySize</h4>
 <pre>public&nbsp;void&nbsp;setLimitedMemorySize(int&nbsp;value)</pre>
-</li>
-</ul>
-<a name="setRegularizationWeight(double)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>setRegularizationWeight</h4>
-<pre>public&nbsp;void&nbsp;setRegularizationWeight(double&nbsp;value)</pre>
-</li>
-</ul>
-<a name="setRegularizationThreshold(double)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>setRegularizationThreshold</h4>
-<pre>public&nbsp;void&nbsp;setRegularizationThreshold(double&nbsp;value)</pre>
 </li>
 </ul>
 <a name="setAbsoluteTolerance(double)">
@@ -471,13 +505,22 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;void&nbsp;stop()</pre>
 </li>
 </ul>
-<a name="setWeight(double[])">
+<a name="start()">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>start</h4>
+<pre>public&nbsp;void&nbsp;start()</pre>
+</li>
+</ul>
+<a name="setWeight(mitiv.array.DoubleArray)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setWeight</h4>
-<pre>public&nbsp;void&nbsp;setWeight(double[]&nbsp;W)</pre>
+<pre>public&nbsp;void&nbsp;setWeight(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</pre>
 </li>
 </ul>
 <a name="getViewer()">
@@ -507,13 +550,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;<a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a>&nbsp;getSynchronizer()</pre>
 </li>
 </ul>
-<a name="setPupil(mitiv.microscopy.MicroscopyModelPSF1D)">
+<a name="setPupil(mitiv.microscopy.WideFieldModel)">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setPupil</h4>
-<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a>&nbsp;pupil)</pre>
+<pre>public&nbsp;void&nbsp;setPupil(<a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy">WideFieldModel</a>&nbsp;pupil)</pre>
 </li>
 </ul>
 <a name="getData()">
@@ -540,7 +583,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="blockList">
 <li class="blockList">
 <h4>getPsf</h4>
-<pre>public&nbsp;<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;getPsf()</pre>
+<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getPsf()</pre>
 </li>
 </ul>
 <a name="setPsf(mitiv.array.DoubleArray)">
@@ -654,7 +697,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <a name="getGradientNormInf()">
 <!--   -->
 </a>
-<ul class="blockListLast">
+<ul class="blockList">
 <li class="blockList">
 <h4>getGradientNormInf</h4>
 <pre>public&nbsp;double&nbsp;getGradientNormInf()</pre>
@@ -664,6 +707,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/invpb/ReconstructionJob.html#getGradientNormInf()">getGradientNormInf</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb">ReconstructionJob</a></code></dd>
 </dl>
+</li>
+</ul>
+<a name="setObj(mitiv.array.ShapedArray)">
+<!--   -->
+</a>
+<ul class="blockListLast">
+<li class="blockList">
+<h4>setObj</h4>
+<pre>public&nbsp;void&nbsp;setObj(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</pre>
 </li>
 </ul>
 </li>
@@ -691,8 +743,8 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/BiPhotonModel.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/WideFieldModel.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -717,13 +769,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li>FIELD&nbsp;|&nbsp;</li>
+<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li>FIELD&nbsp;|&nbsp;</li>
+<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
