--- a/mitiv/optim/OptimTask.html
+++ b/mitiv/optim/OptimTask.html
@@ -34,8 +34,8 @@
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/OptimTask.html" target="_top">FRAMES</a></li>
@@ -127,33 +127,23 @@ extends java.lang.Enum&lt;<a href="../../mitiv/optim/OptimTask.html" title="enum
 <th class="colOne" scope="col">Enum Constant and Description</th>
 </tr>
 <tr class="altColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#COMPUTE_F">COMPUTE_F</a></strong></code>
-<div class="block">Caller shall compute <code>f(x)</code>.</div>
-</td>
-</tr>
-<tr class="rowColor">
 <td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#COMPUTE_FG">COMPUTE_FG</a></strong></code>
 <div class="block">Caller shall compute <code>f(x)</code> and <code>g(x)</code>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#ERROR">ERROR</a></strong></code>
 <div class="block">An error has occurred.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#FINAL_X">FINAL_X</a></strong></code>
 <div class="block">Algorithm has converged, solution is available in <code>x</code>.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#NEW_X">NEW_X</a></strong></code>
 <div class="block">A new iterate is available in <code>x</code>.</div>
-</td>
-</tr>
-<tr class="rowColor">
-<td class="colOne"><code><strong><a href="../../mitiv/optim/OptimTask.html#PROJECT_V">PROJECT_V</a></strong></code>
-<div class="block">Caller shall project workspace vector <code>v</code> to the feasible set.</div>
 </td>
 </tr>
 <tr class="altColor">
@@ -273,31 +263,11 @@ the order they are declared.</div>
 <a name="WARNING">
 <!--   -->
 </a>
-<ul class="blockList">
+<ul class="blockListLast">
 <li class="blockList">
 <h4>WARNING</h4>
 <pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> WARNING</pre>
 <div class="block">Algorithm terminated with a warning.</div>
-</li>
-</ul>
-<a name="COMPUTE_F">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>COMPUTE_F</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> COMPUTE_F</pre>
-<div class="block">Caller shall compute <code>f(x)</code>.</div>
-</li>
-</ul>
-<a name="PROJECT_V">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>PROJECT_V</h4>
-<pre>public static final&nbsp;<a href="../../mitiv/optim/OptimTask.html" title="enum in mitiv.optim">OptimTask</a> PROJECT_V</pre>
-<div class="block">Caller shall project workspace vector <code>v</code> to the feasible set.</div>
 </li>
 </ul>
 </li>
@@ -394,8 +364,8 @@ with the specified name</dd>
 </div>
 <div class="subNav">
 <ul class="navList">
-<li><a href="../../mitiv/optim/NonLinearConjugateGradient.html" title="class in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="interface in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/optim/OptimStatus.html" title="enum in mitiv.optim"><span class="strong">PREV CLASS</span></a></li>
+<li><a href="../../mitiv/optim/ReverseCommunicationOptimizer.html" title="class in mitiv.optim"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/optim/OptimTask.html" target="_top">FRAMES</a></li>
